[gd_scene load_steps=3 format=3 uid="uid://cxifenwci2556"]

[ext_resource type="Script" path="res://addons/Line_Counter/VBoxContainer.gd" id="1_2bcrw"]
[ext_resource type="Script" path="res://addons/Line_Counter/Main_container.gd" id="1_u80pc"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_u80pc")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 600.0
offset_bottom = 110.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Commtens_ON" type="CheckBox" parent="MainContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Incule Comments"

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer"]
custom_minimum_size = Vector2(800, 600)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(750, 500)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_2bcrw")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="toggled" from="MainContainer/HBoxContainer/Commtens_ON" to="." method="_on_commtens_on_toggled"]
